Realice cambios en los css de todas las secciones de la pagina para que se vea como en una pantalla de celular, agregue productos en la seccion de contornos y polvos

--- a/src/app/modules/autentificacion/pages/iniciosesion/iniciosesion.component.css
+++ b/src/app/modules/autentificacion/pages/iniciosesion/iniciosesion.component.css
@@ -27,3 +27,20 @@ mat-form-field{
    
 
 }
+
+@media (max-width: 599px) {
+    .container {
+      grid-template-columns: 1fr; /* Una columna en pantallas pequeñas */
+    }
+  
+    .boton {
+      width: 100%;
+      max-width: 150px;
+      height: 45px;
+      font-size: 14px;
+    }
+  
+    mat-form-field {
+      width: 90%; /* Ajusta el ancho del formulario en pantallas pequeñas */
+    }
+}
