--- a/src/app/modules/ofertas/ofertas.component.html
+++ b/src/app/modules/ofertas/ofertas.component.html
@@ -1,6 +1,8 @@
 
 <div class="container">
-            <p id="titulo"> Bienvenido a nuestra seccion de Ofertas!</p>
+            <p id="titulo"> Bienvenido a nuestra
+                
+                 seccion de Ofertas!</p>
         
     <div class="row">
         <div class="col">
