--- a/src/app/modules/producto/pages/contorno/contorno.component.html
+++ b/src/app/modules/producto/pages/contorno/contorno.component.html
@@ -6,7 +6,7 @@
                   <mat-card-header>
                       <div mat-card-avatar class="example-header-image"></div>
                       <mat-card-title>{{i.nombre}}</mat-card-title>
-                      <mat-card-subtitle>Tono: {{i.tono}}</mat-card-subtitle>
+                      <mat-card-subtitle>{{i.tono}}</mat-card-subtitle>
                       <mat-card-subtitle>{{i.alt}}</mat-card-subtitle>
                   </mat-card-header>
 
