--- a/src/app/modules/shared/components/navbar/navbar.component.html
+++ b/src/app/modules/shared/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar id="animacion">
-  <p>¡Compra minima de 20.000 pesos! con 50% off en transferencias</p>
-</mat-toolbar> 
+  <p>¡Compra minima de 20.000 pesos!</p>
+</mat-toolbar>
 
 <mat-toolbar class="navbar">
 
@@ -23,8 +23,8 @@
         <mat-menu #Rostro>
           <button mat-menu-item routerLink="Rubores/">Rubores</button>
           <button mat-menu-item routerLink="Bases/">Bases</button>
-          <button mat-menu-item routerLink="Corrector/">Correctores</button>
-          <button mat-menu-item routerLink="Polvos/">Polvos compactos</button>
+          <!-- <button mat-menu-item routerLink="Corrector/">Correctores</button>-->
+          <button mat-menu-item routerLink="Polvos/">Polvos compactos y sueltos</button>
           <button mat-menu-item routerLink="Contorno/">Contorno</button>
           <button mat-menu-item routerLink="Iluminador/">Iluminador</button>
         </mat-menu>
