--- a/src/app/modules/sobrenosotros/sobrenosotros.component.html
+++ b/src/app/modules/sobrenosotros/sobrenosotros.component.html
@@ -1,8 +1,31 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <p>Como comenzo todo</p>
-                    
+            <p>
+                ¡Hola! Somos un grupo de amantes del maquillaje, listos para compartir experiencias y productos que realzan tu belleza.
+            </p>
+            <h3>¿Por qué Elegirnos?</h3>
+            <ul>
+                <li><strong>Calidad:</strong> Ingredientes de alta calidad para cuidar tu piel.</li>
+                <li><strong>Variedad:</strong> Labiales y sombras para todos los gustos.</li>
+                <li><strong>Sostenibilidad:</strong> Productos cruelty-free y envases reciclables.</li>
+                <li><strong>Asesoría:</strong> Te ayudamos a encontrar lo mejor para ti.</li>
+            </ul>
+            <h3>¿Qué Ofrecemos?</h3>
+            <ul>
+                <li><strong>Talleres:</strong> Aprende técnicas de maquillaje.</li>
+                <li><strong>Ofertas:</strong> Promociones que no querrás perderte.</li>
+            </ul>
+            <h3>Únete a Nuestra Comunidad</h3>
+            <p>
+                Con Divinas Makeup, celebramos la diversidad y la autoexpresión. ¡Comparte tus looks!
+            </p>
+            <h3>¡Descubre!</h3>
+            <p>
+                Visita nuestra web y síguenos en @divinasmakeup.
+                 ¡Tu belleza merece lo mejor!
+            </p>
+            <img src="../../../assets/imagenes/logo.jpg" alt="">
         </div>
     </div>
 </div>
