--- a/src/app/modules/inicio/pages/inicio/inicio.component.css
+++ b/src/app/modules/inicio/pages/inicio/inicio.component.css
@@ -15,6 +15,7 @@ h1{
   flex-wrap: wrap;
   gap: 30px; /* Espacio entre las tarjetas */
   box-sizing: border-box;
+  
 }
 
 h1 {
@@ -93,4 +94,47 @@ height: 600px;
 
 #img-carrusel{
   object-fit: none;
+}
+
+
+@media (max-width: 599px) {
+  h1 {
+    font-size: 24px;
+  }
+
+  .container {
+    padding: 5px;
+    gap: 15px;
+  
+  }
+
+  .contenido {
+    margin: 10px auto;
+    padding: 10px;
+    width: 100%;
+    margin-top: 300px;
+  }
+
+  #card {
+    width: 100%;
+    padding: 20px;
+  }
+
+  button {
+    font-size: 14px;
+    padding: 8px 16px;
+  }
+
+  #carouselExampleRide {
+    height: 250px; /* Reduce aún más la altura del carrusel */
+  }
+
+  #imagenInicio {
+    width: 100%;
+    height: auto
+  }
+  .img-carrusel{
+    width: 100%;
+        height: 40rem;
+  }
 }
