--- a/src/app/modules/inicio/pages/inicio/inicio.component.html
+++ b/src/app/modules/inicio/pages/inicio/inicio.component.html
@@ -5,10 +5,10 @@
         <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img id="img-carrusel" src="../../../../../assets/imagenes/imgInicio.png" class="d-block w-100" alt="...">
+              <img class="img-carrusel" src="../../../../../assets/imagenes/imgInicio.png" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="../../../../../assets/imagenes/descuento.jpg" class="d-block w-100" alt="...">
+              <img class="img-carrusel" src="../../../../../assets/imagenes/descuento.jpg" class="d-block w-100" alt="...">
             </div>
             
           </div>
@@ -27,28 +27,30 @@
         <h1 id="titulo">Nuestras Ofertas</h1>
     
 
+<div class="contenido">
+  <div *ngFor="let i of info" id="card">
+    <mat-card class="card">
+        <mat-card-header>
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title>{{i.nombre}}</mat-card-title>
+            <mat-card-subtitle></mat-card-subtitle>
+            <mat-card-subtitle>{{i.alt}}</mat-card-subtitle>
+        </mat-card-header>
 
-          <div *ngFor="let i of info" class="contenido">
-              <mat-card class="card">
-                  <mat-card-header>
-                      <div mat-card-avatar class="example-header-image"></div>
-                      <mat-card-title>{{i.nombre}}</mat-card-title>
-                      <mat-card-subtitle></mat-card-subtitle>
-                      <mat-card-subtitle>{{i.alt}}</mat-card-subtitle>
-                  </mat-card-header>
+        <mat-card-content>
+            <img id="img-card" mat-card-image src="{{i.imagen}}">
+          
+            <p><s>${{i.precio}}</s></p>
+            <p>${{i.precio2}}</p>
+        </mat-card-content>
+        <mat-card-actions>
+            <button id="boton-de-card" mat-button>Comprar</button>
+        </mat-card-actions>
+    </mat-card>
+</div>
 
-                  <mat-card-content>
-                      <img id="img-card" mat-card-image src="{{i.imagen}}">
-                    
-                      <p><s>${{i.precio}}</s></p>
-                      <p>${{i.precio2}}</p>
-                  </mat-card-content>
-                  <mat-card-actions>
-                      <button id="boton-de-card" mat-button>Comprar</button>
-                  </mat-card-actions>
-              </mat-card>
-          </div>
-  
+</div>
+         
 
        
       </div>
