--- a/src/app/modules/ofertas/ofertas.component.css
+++ b/src/app/modules/ofertas/ofertas.component.css
@@ -56,3 +56,36 @@ button {
     font-size: 40px;
     padding: 100px;
 }
+
+@media (max-width: 599px) {
+    h1 {
+      font-size: 28px;
+      text-align: center;
+    }
+#titulo{
+    font-size: 30px;
+    padding: 5px;
+}
+    .container {
+      padding: 5px;
+      gap: 15px;
+      display: grid;
+      grid-template-columns: 1fr; /* Una columna en pantallas pequeñas */
+    }
+  
+    .contenido {
+      margin: 10px auto;
+      padding: 10px;
+      width: 100%;
+    }
+  
+    .card {
+      width: 100%;
+      padding: 10px;
+    }
+  
+    button {
+      font-size: 14px;
+      padding: 8px 16px;
+    }
+  }
