--- a/src/app/modules/shared/components/navbar/navbar.component.css
+++ b/src/app/modules/shared/components/navbar/navbar.component.css
@@ -1,27 +1,8 @@
-@media (min-width: 300px) and (max-width: 700px) {
-  #navbar {
-    background-color: rgb(248, 245, 248);
-  }
-  #menuSecciones {
-    display: none;
-  }
-  #Inicio {
-    display: none;
-  }
-}
 
-@media (min-width: 700px) {
-  mat-toolbar {
-    background-color: rgb(233, 195, 223);
-  }
-  #botones {
-    display: none;
-  }
-}
 
 .navbar {
   height: 90px;
-
+background-color:  rgb(237, 163, 190);
   justify-content: space-between; /* Alinea los elementos a los bordes */
   align-items: center; /* Centra verticalmente */
 }
@@ -73,5 +54,26 @@ font-size: 20px;
   to {
     margin-left: 0%;
     width: 100%;
+  }
+}
+/* Pantallas pequeñas (celulares) */
+@media (max-width: 599px) {
+  .navbar {
+    padding: 0 10px;
+  }
+
+  .logo {
+    width: 50px;
+    height: 50px;
+    margin-right: 10px; /* Reduce el espacio entre el logo y el menú desplegable */
+  }
+
+  .menu {
+    display: flex;
+    align-items: center;
+    margin-right: 0; /* Elimina el margen adicional */
+  }
+  p{
+    font-size: 15px;
   }
 }
