segui con carrito de compras y le agregue funcionalidad al boton de todas las vistas de la pagina, cambie las imagenes del carrusel y lo alinee al centro, cambie a las cards se oferta y las movi a la seccion llamada cards, en la seccion de inicio deje solo el carrusel con el app-cards para que se muestren, queda alinearlas al centro y agregar el modal para el carrito de compras

--- a/src/app/modules/producto/pages/sombras/sombras.component.html
+++ b/src/app/modules/producto/pages/sombras/sombras.component.html
@@ -9,7 +9,7 @@
                 <button id="boton" class="btn btn-outline-success">Buscar</button>
               </form>   
 -->
-            
+            <h1>Sombras</h1>
 
 
             <div *ngFor="let i of info " class="contenido">
@@ -26,7 +26,7 @@
                         <p>Precio: ${{i.precio}}</p>
                     </mat-card-content>
                     <mat-card-actions>
-                        <button mat-button>Comprar</button>
+                        <button mat-button (click)="crudService.AgregarAlCarrito(i)">Comprar</button>
                     </mat-card-actions>
                 </mat-card>
             </div>
