--- a/src/app/modules/shared/components/navbar/navbar.component.html
+++ b/src/app/modules/shared/components/navbar/navbar.component.html
@@ -23,7 +23,7 @@
         <mat-menu #Rostro>
           <button mat-menu-item routerLink="Rubores/">Rubores</button>
           <button mat-menu-item routerLink="Bases/">Bases</button>
-          <!-- <button mat-menu-item routerLink="Corrector/">Correctores</button>-->
+          <button mat-menu-item routerLink="Corrector/">Correctores</button>
           <button mat-menu-item routerLink="Polvos/">Polvos compactos y sueltos</button>
           <button mat-menu-item routerLink="Contorno/">Contorno</button>
           <button mat-menu-item routerLink="Iluminador/">Iluminador</button>
