--- a/src/app/modules/inicio/pages/inicio/inicio.component.html
+++ b/src/app/modules/inicio/pages/inicio/inicio.component.html
@@ -1,63 +1,38 @@
 <div class="container">
   <div class="row">
-      <div class="col">
+    <div class="col ">
 
-        <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img class="img-carrusel" src="../../../../../assets/imagenes/imgInicio.png" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img class="img-carrusel" src="../../../../../assets/imagenes/descuento.jpg" class="d-block w-100" alt="...">
-            </div>
-            
+      <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="img-carrusel" src="../../../../../assets/imagenes/imgInicio.jfif" class="d-block w-100"
+              alt="...">
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
+          <div class="carousel-item">
+            <img class="img-carrusel" src="../../../../../assets/imagenes/imgcarrusel.jfif" class="d-block w-100"
+              alt="...">
+          </div>
+          <div class="carousel-item">
+            <img class="img-carrusel" src="../../../../../assets/imagenes/imgcarrusel2.jfif" class="d-block w-100"
+              alt="...">
+          </div>
         </div>
-
-
-      
-        <h1 id="titulo">Nuestras Ofertas</h1>
-    
-
-<div class="contenido">
-  <div *ngFor="let i of info" id="card">
-    <mat-card class="card">
-        <mat-card-header>
-            <div mat-card-avatar class="example-header-image"></div>
-            <mat-card-title>{{i.nombre}}</mat-card-title>
-            <mat-card-subtitle></mat-card-subtitle>
-            <mat-card-subtitle>{{i.alt}}</mat-card-subtitle>
-        </mat-card-header>
-
-        <mat-card-content>
-            <img id="img-card" mat-card-image src="{{i.imagen}}">
-          
-            <p><s>${{i.precio}}</s></p>
-            <p>${{i.precio2}}</p>
-        </mat-card-content>
-        <mat-card-actions>
-            <button id="boton-de-card" mat-button>Comprar</button>
-        </mat-card-actions>
-    </mat-card>
-</div>
-
-</div>
-         
-
-       
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
+
+
+      <app-cards></app-cards>
+    </div>
   </div>
+
+
+
 </div>
-
-
-
-
 
