--- a/src/app/modules/ofertas/ofertas.component.html
+++ b/src/app/modules/ofertas/ofertas.component.html
@@ -25,7 +25,7 @@
                         <p>${{i.precio2}}</p>
                     </mat-card-content>
                     <mat-card-actions>
-                        <button mat-button (click)="servicioCrud.AgregarAlCarrito(i)" ><mat-icon>shopping_cart</mat-icon></button>
+                        <button mat-button (click)="crudService.AgregarAlCarrito(i)" ><mat-icon>shopping_cart</mat-icon></button>
                     </mat-card-actions>
                 </mat-card>
             </div>
