--- a/src/app/modules/producto/pages/bases/bases.component.css
+++ b/src/app/modules/producto/pages/bases/bases.component.css
@@ -10,8 +10,11 @@
 }
 
 h1 {
-    text-align: left;
+  text-align: center;
+  font-size: 50px;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
+
 
 .contenido {
     width: 200px;
