--- a/src/app/modules/producto/pages/bases/bases.component.html
+++ b/src/app/modules/producto/pages/bases/bases.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="row">
       <div class="col">
+        <h1>Bases</h1>
           <div *ngFor="let i of info" class="contenido">
               <mat-card class="card">
                   <mat-card-header>
@@ -15,7 +16,7 @@
                       <p>Precio: ${{i.precio}}</p>
                   </mat-card-content>
                   <mat-card-actions>
-                      <button mat-button>Comprar</button>
+                    <button mat-button (click)="crudService.AgregarAlCarrito(i)" ><mat-icon>shopping_cart</mat-icon></button>
                   </mat-card-actions>
               </mat-card>
           </div>
