--- a/src/app/modules/producto/pages/perfumeria/perfumeria.component.css
+++ b/src/app/modules/producto/pages/perfumeria/perfumeria.component.css
@@ -11,9 +11,9 @@
 }
 
 h1 {
-    text-align: left;
+    text-align: center;
     font-size: 50px;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
 
 .contenido {
