--- a/src/app/modules/producto/pages/perfumeria/perfumeria.component.html
+++ b/src/app/modules/producto/pages/perfumeria/perfumeria.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <h1>Perfumeria</h1>
+            <h1>Perfumería</h1>
             <div *ngFor="let i of info" class="contenido">
                 <mat-card class="card">
                     <mat-card-header>
@@ -16,7 +16,7 @@
                         <p>Precio: ${{i.precio}}</p>
                     </mat-card-content>
                     <mat-card-actions>
-                        <button mat-button>Comprar</button>
+                        <button mat-button (click)="crudService.AgregarAlCarrito(i)">Comprar</button>
                     </mat-card-actions>
                 </mat-card>
             </div>
