--- a/src/app/modules/producto/pages/sombras/sombras.component.css
+++ b/src/app/modules/producto/pages/sombras/sombras.component.css
@@ -11,7 +11,9 @@
 }
 
 h1 {
-    text-align: left;
+  text-align: center;
+  font-size: 50px;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
 
 .contenido {
