--- a/src/app/modules/shared/components/navbar/navbar.component.html
+++ b/src/app/modules/shared/components/navbar/navbar.component.html
@@ -40,6 +40,9 @@
 
   <!-- Loguearse -->
   <div id="loguearse">
+    <button routerLink="/carrito">
+      carrito
+    </button>
     <button mat-icon-button [matMenuTriggerFor]="usuario">
       <mat-icon id="icon">person</mat-icon>
     </button>
