--- a/src/app/modules/producto/pages/polvos/polvos.component.html
+++ b/src/app/modules/producto/pages/polvos/polvos.component.html
@@ -1,25 +1,54 @@
 <div class="container">
   <div class="row">
-      <div class="col">
-        <h1>Polvos compactos y sueltos</h1>
-          <div *ngFor="let i of info" class="contenido">
-              <mat-card class="card">
-                  <mat-card-header>
-                      <div mat-card-avatar class="example-header-image"></div>
-                      <mat-card-title>{{i.nombre}}</mat-card-title>
-                      <mat-card-subtitle>Tono: {{i.tono}}</mat-card-subtitle>
-                      <mat-card-subtitle>{{i.alt}}</mat-card-subtitle>
-                  </mat-card-header>
+    <div class="col">
+      <h1>ofertas</h1>
+      <div *ngFor="let i of info" class="contenido">
+        <mat-card class="card">
+          <mat-card-header>
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title>{{i.nombre}}</mat-card-title>
+            <mat-card-subtitle>{{i.tono}}</mat-card-subtitle>
+            <mat-card-subtitle>{{i.alt}}</mat-card-subtitle>
+          </mat-card-header>
 
-                  <mat-card-content>
-                      <img mat-card-image src="{{i.imagen}}">
-                      <p>Precio: ${{i.precio}}</p>
-                  </mat-card-content>
-                  <mat-card-actions>
-                      <button mat-button (click)="crudService.AgregarAlCarrito(i)">Comprar</button>
-                  </mat-card-actions>
-              </mat-card>
+          <mat-card-content>
+            <img mat-card-image src="{{i.imagen}}">
+            <p>${{i.precio}}</p>
+          
+          </mat-card-content>
+          <mat-card-actions>
+            <button mat-button (click)="crudService.AgregarAlCarrito(i)">Comprar</button>
+          </mat-card-actions>
+        </mat-card>
+
+        <div class="modal fade" id="verMas" tabindex="-1" aria-labelledby="exampleModalLabel"
+          aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">{{i.nombre}}</h1>
+              </div>
+              <div class="modal-body">
+                <img src="{{i.imagen}}" id="img-modal" alt="{{i.alt}}">
+                  <div class="mb-3" id="text-modal">
+                    {{i.tono}}
+                  </div>
+                  <div class="mb-3" >
+                    <p><s>${{i.precio}}</s></p>
+                 
+                  </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" (click)="crudService.AgregarAlCarrito(i)" data-bs-dismiss="modal">
+                  Agregar al carrito
+                </button>
+                <button type="button" data-bs-dismiss="modal" >Cerrar</button>
+              </div>
+            </div>
           </div>
-      </div>
-  </div>
-</div>
+        </div>
+
+      </div> <!--Contenido-->
+    </div> <!--Col-->
+  </div> <!--Row-->
+</div> <!--Container-->  
