--- a/src/app/modules/inicio/pages/inicio/inicio.component.css
+++ b/src/app/modules/inicio/pages/inicio/inicio.component.css
@@ -1,40 +1,16 @@
-
-.container {
-  padding: 10px;
-  justify-content: center;
-  background-color:  rgb(248, 234, 239);
-  max-width: 100vw;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 30px; /* Espacio entre las tarjetas */
-  box-sizing: border-box;
-}
-
-#carouselExampleRide {
-  width: 1000px;
-  height: 600px;
-  position: relative; /* Asegura que los controles estén bien posicionados */
-  overflow: hidden; /* Asegura que no se desborden los elementos */
-  border-radius: 15px; /* Redondeamos las esquinas */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Agrega sombra para profundidad */
+.contenido{
+  background-color: rgb(248, 234, 239);
 }
 
 
-.carousel-inner img {
-  width: 900px;
-  height: 600px;
-  object-fit: cover; /* Asegura que las imágenes cubran bien el área del carrusel */
-  border-radius: 15px;
+.carrusel{
+
+margin-top: 20px;
+margin-left: 300px;
+width: 800px;
+height: 650px;
 }
-
-
-/* Indicadores del carrusel */
-.carousel-indicators li {
-  background-color: rgba(0, 0, 0, 0.5); /* Indicadores más visibles */
-  border-radius: 50%; /* Indicadores circulares */
+.imagenes{
+  width: 800px;
+  height: 650px;
 }
-.carousel-indicators .active {
-  background-color: #fff; /* Indicador activo con color blanco */
-}
-
-
