--- a/src/app/modules/inicio/pages/inicio/inicio.component.html
+++ b/src/app/modules/inicio/pages/inicio/inicio.component.html
@@ -1,9 +1,9 @@
-<div class="container">
+<div class="contenido">
   <div class="row">
     <div class="col ">
 
-      <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
-        <div class="carousel-inner">
+      <div id="carouselExampleRide" class="carousel slide carrusel" data-bs-ride="true">
+        <div class="carousel-inner imagenes">
           <div class="carousel-item active">
             <img class="img-carrusel" src="../../../../../assets/imagenes/imgInicio.jfif" class="d-block w-100"
               alt="...">
@@ -28,7 +28,7 @@
       </div>
 
 
-      <app-cards></app-cards>
+
     </div>
   </div>
 
