--- a/src/app/modules/inicio/components/cards/cards.component.html
+++ b/src/app/modules/inicio/components/cards/cards.component.html
@@ -1,66 +1,74 @@
-<!-- Espacio para mostrar la informacion de Input -->
+<!--Espacio para mostrar la informacion de Input-->
 <div class="row">
-  <div class="col-lg-12" *ngIf="compraVisible">
-      <div class="col-lg-4">
-          <div class="card text-bg-info mb-3">
-              <ul class="list-group">
-                  <h3>Ultima compra:</h3>
-                  <li class="list-group-item">
-                      {{productoReciente}}
-                  </li>
-              </ul>
-          </div>
-      </div>
-  </div>
-      
-  
-  
-  <!-- Card para mostrar TODOS los productos que el admin ingrese a la base de datos -->
-  <div class="col" *ngFor="let producto of coleccionProductos">
-      <div class="card">
-          <img src="{{producto.imagen}}" class="card-img-top" alt="{{producto.alt}}">
+    <div class="col-lg-12" *ngIf="compraVisible">
+        <div class="col-lg-4">
+            <div class="card text-bg-info mb-3">
+                <ul class="list-group">
+                    <h3>Ultima compra:</h3>
+                    <li class="list-group-item">
+                        {{productoReciente}}
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 
-          <div class="card-body">
-              <p class="card-text">{{producto.precio}}</p>
 
-              <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#verMas"
-                  (click)="mostrarVer(producto)">Ver más</button>
-          </div>
-      </div>
-  </div>
+    <!--Card para mostrar todos los productos que el ADMIN ingrese a la base de datos-->
+    <div class="contenido" *ngFor=" let producto of coleccionProductos">
+
+        <div class="card" style="width: 18rem;">
+            <img src="{{producto.imagen}}" class="card-img-top" alt="{{producto.alt}}">
+
+            <div class="card-body">
+                <h5 class="card-title">{{producto.nombre}}</h5>
+                <p class="card-text">{{producto.precio}}</p>
+
+
+                <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#verMas"
+                    (click)="mostrarVer(producto)">Ver
+                    más</button>
+            </div>
+        </div>
+
+    </div>
+
+
 </div>
 
 
 
-<!-- Modal para ver más información -->
-<div class="modal fade" id="verMas" tabindex="-1" aria-labelledby="exampleModalLabel"
-  aria-hidden="true">
-  <div class="modal-dialog">
-      <div class="modal-content">
-          <div class="modal-header">
-              <h1 *ngIf="modalVisible" class="modal-title" id="exampleModalLabel">{{productoSeleccionado.nombre}}</h1>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
 
-          <div class="modal-body" *ngIf="modalVisible">
-              <img src="{{productoSeleccionado.imagen}}" alt="{{productoSeleccionado.alt}}" class="card-img-top">
+<!--Modal para ver la informacion-->
+<div class="modal fade" *ngIf="modalVisible" id="verMas" tabindex="-1" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">{{productoSeleccionado.nombre}}</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <img src="{{productoSeleccionado.imagen}}" alt="{{productoSeleccionado.alt}}">
 
+                <div class="mb-3">
+                    {{productoSeleccionado.descripcion}}
+                </div>
+                <div class="mb-3">
+                    {{productoSeleccionado.precio}}
+                </div>
+                <div class="mb-3">
+                    {{productoSeleccionado.stock}}
+                </div>
 
-              <div  class="mb-3">
-                  {{productoSeleccionado.precio}}
-              </div>
+            </div>
+            <div class="modal-footer">
 
-              <div class="mb-3">
-                  {{productoSeleccionado.stock}}
-              </div>
-          </div>
-
-          <div class="modal-footer">
-              <input type="number" placeholder="Cantidad deseada del producto" [(ngModel)]="stock">
-              <button type="button" class="btn btn-outline-primary" data-bs-dismiss="modal"
-                  (click)="agregarProducto(productoSeleccionado)">Agregar</button>
-              <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cerrar</button>
-          </div>
-      </div>
-  </div>
+                <input type="number" placeholder="Cantidad deseada del producto" [(ngModel)]="stock">
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal"
+                    (click)="agregarProducto(productoSeleccionado)">Agregar</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+            </div>
+        </div>
+    </div>
 </div>
