Resolvi el error del crud service, tambien logre que funcione el registro de usuario y el inicio sesion, me falta funcionalidad en los guards y en el guardado de productos nuevos

--- a/src/app/modules/admin/components/table/table.component.html
+++ b/src/app/modules/admin/components/table/table.component.html
@@ -69,9 +69,9 @@
                     <label class="form-label">Selecciona una categoría:</label>
                     <select class="form-control" formControlName="categoria" class="form-select">
                         <option selected>Elija una opción</option>
-                        <option value="sombras">Sombras</option>
-                        <option value="iluminador">Iluminadores</option>
-                        <option value="labiales">Labiales</option>
+                        <option value="Sombras">Sombras</option>
+                        <option value="Iluminador">Iluminadores</option>
+                        <option value="Labiales">Labiales</option>
                     </select>
                 </div>
 
