--- a/src/app/modules/admin/pages/admin/admin.component.html
+++ b/src/app/modules/admin/pages/admin/admin.component.html
@@ -1,7 +1,6 @@
-<p>admin works!</p>
 <div class="container">
     <div class="row">
-        <h1>Admin</h1>
+        <h1>¡Bienvenido Administrador!</h1>
 
         <div class="col">
             <app-table></app-table>
