--- a/src/app/modules/autentificacion/pages/registro/registro.component.html
+++ b/src/app/modules/autentificacion/pages/registro/registro.component.html
@@ -45,6 +45,6 @@
             <mat-hint align="start">Minimo:6/{{input.value.length}}</mat-hint>
           </mat-form-field>
           <!-- Boton para enviar la informacion a la base de datos -->
-          <button class="boton" mat-raised-button color="primary">Registrar</button>
+          <button class="boton" mat-raised-button color="primary"  (click)="registrar()">Registrar</button>
     </div>
 </div>
